--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,18 @@ services:
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=db
       - TZ=Europe/Moscow
+  mongodb:
+    image: mongo
+    restart: always
+    volumes:
+      - mongo_data:/data/db
+    ports:
+      - 27017:27017
+    env_file: ".env"
+    environment:
+      - TZ=Europe/Moscow
 
 volumes:
   postgres_data:
   redis_data:
+  mongo_data:
