--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,10 @@
-aiofiles==23.1.0
-aiogram==3.1.1
-aiohttp==3.8.6
-aioredis==2.0.1
-aiosignal==1.3.1
-alembic==1.12.1
-annotated-types==0.6.0
-APScheduler==3.10.4
-async-timeout==4.0.3
-attrs==23.1.0
-certifi==2023.7.22
-charset-normalizer==3.3.2
-dnspython==2.7.0
-environs==9.5.0
-frozenlist==1.4.0
-greenlet==3.0.1
-idna==3.4
-magic-filter==1.0.12
-Mako==1.3.0
-MarkupSafe==2.1.3
-marshmallow==3.20.1
-multidict==6.0.4
-packaging==23.2
-psycopg2-binary==2.9.10
-pydantic==2.3.0
-pydantic_core==2.6.3
-pymongo==4.10.1
-python-dotenv==1.0.0
-pytz==2023.3.post1
-redis==5.0.1
-requests==2.32.3
-six==1.16.0
-SQLAlchemy==1.4.50
-sqlalchemy2-stubs==0.0.2a36
-typing_extensions==4.7.1
-tzdata==2023.3
-tzlocal==5.2
-urllib3==2.2.3
-yarl==1.9.2
+aiogram>=3.13,<4
+pydantic>=2.6,<3
+pydantic-settings>=2.3,<3
+python-dotenv>=1.0,<2
+SQLAlchemy>=2.0.31,<3
+asyncpg>=0.30,<1
+alembic>=1.13,<2
+redis>=5,<6
+APScheduler==3.11.0
+uvloop>=0.19,<1 ; platform_system != "Windows"
