--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,18 @@
 aiogram>=3.13,<4
+magic-filter>=1.0,<2
 pydantic>=2.6,<3
 pydantic-settings>=2.3,<3
 python-dotenv>=1.0,<2
+environs>=11,<12
 SQLAlchemy>=2.0.31,<3
 asyncpg>=0.30,<1
 alembic>=1.13,<2
+psycopg2-binary>=2.9.9,<3
 redis>=5,<6
+pymongo>=4.8,<5
+motor>=3.4,<4
 APScheduler==3.11.0
+tzlocal>=5,<6
+requests>=2.32,<3
+aiohttp>=3.10,<4
 uvloop>=0.19,<1 ; platform_system != "Windows"
